added hover effects on gif items

--- a/index.html
+++ b/index.html
@@ -280,6 +280,11 @@
 						<button class="step5-btn">Subir</button>
 					</div>
 				</section>
+
+				<!-- <div class="popup">
+					<img src="./assets/close.svg" alt="close-popup" class="close-popup" />
+					<img src="" alt="close-popup" class="close-popup" />
+				</div> -->
 			</main>
 
 			<!-- footer -->
